# vehicle-sim

./: .gitignore  .gitmodules  CMakeLists.txt  IOS_QUICK_START.md  MVP_VERIFICATION.md  Makefile  README.md
docs/: IOS_BUILD_STATUS.md  README.md  RESEARCH_TESLA_CAN_BLE.md  audi-etron-obd2-research.md  hardware-adapter-guide.md  tesla-model3-can-reference.md
include/vehicle-sim/: BLEManager.h  PhysicsEngine.h  TelemetryFormatter.h  VehicleSim.h
include/vehicle-sim/ble/: BLEDeviceInfo.h  BLEManagerBase.h
include/vehicle-sim/ble/platform/: BLEManagerMacOS.h  BLEManageriOS.h
include/vehicle-sim/boundary/: ELM327Transport.h
include/vehicle-sim/cli/: CliOptions.h
include/vehicle-sim/config/: ConfigLoader.h
include/vehicle-sim/domain/: AudiMLBTranslator.h  CANDecoder.h  CANTranslatorBase.h  DBCSignalDefinition.h  DBCSignalMapper.h  DBCSignalTranslator.h  DBCTranslationService.h  DefaultVehicleConfigs.h  ISignalTranslator.h  OBD2Math.h  TelemetrySignal.h  TeslaCANTranslator.h  TeslaSignalTranslator.h  VehicleConfig.h  VehicleDetector.h
include/vehicle-sim/presentation/: VehicleSignalFormatter.h
src/: main.cpp
src/ble/: BLEManager.cpp  BLEManagerBase.cpp
src/ble/platform/: BLEManagerMacOS.mm  BLEManagerMock.cpp  BLEManageriOS.mm
src/cli/: CliOptions.cpp
src/config/: ConfigLoader.cpp
src/domain/: AudiMLBTranslator.cpp  CANTranslatorBase.cpp  DBCSignalDefinition.cpp  DBCSignalMapper.cpp  DBCSignalTranslator.cpp  DBCTranslationService.cpp  DefaultVehicleConfigs.cpp  DemoSignalProvider.cpp  TelemetrySignal.cpp  TeslaCANTranslator.cpp  TeslaSignalTranslator.cpp  VehicleConfig.cpp  VehicleDetector.cpp  VehicleSignalFactory.cpp
src/physics/: PhysicsEngine.cpp
src/presentation/: TelemetryFormatter.cpp  VehicleSignalFormatter.cpp
src/telemetry/: TraceLogger.cpp
test/: CMakeLists.txt  test_example.cpp
test/ble/: BLEManager.test.cpp
test/boundary/: VehicleDetectorIntegration.test.cpp
test/cli/: CliOptions.test.cpp
test/domain/: CANTranslatorBase.test.cpp  DBCParser.test.cpp  DBCSignalTranslator.test.cpp  DBCTranslationService.test.cpp  DefaultVehicleConfigs.test.cpp  DemoSignalProvider.test.cpp  EventDispatcher.test.cpp  ISignalTranslator.test.cpp  TelemetrySignal.test.cpp  TeslaSignalTranslator.test.cpp  VehicleDetector.test.cpp  VehicleSignal.test.cpp  VehicleSignalFactory.test.cpp
test/integration/: AudiOBD2LiveDecoding.test.cpp  DBCLiveDecoding.test.cpp  DBCPipelineIntegration.test.cpp  EventDispatcherIntegration.test.cpp  TeslaCANLiveDecoding.test.cpp
test/physics/: PhysicsEngine.test.cpp
test/presentation/: TelemetryFormatter.test.cpp  VehicleSignalFormatter.test.cpp
test/telemetry/: TraceLogger.test.cpp
vehicle-sim-ios/: BUILD_DEPLOY_GUIDE.md
vehicle-sim-ios/VehicleSim/: ContentView.swift  Info.plist  VehicleSimWrapper.h  VehicleSimWrapper.mm  VehicleViewModel.swift
vehicle-sim-ios/VehicleSim/VehicleSimApp.xcodeproj/: project.pbxproj
vehicle-sim-ios/VehicleSim/VehicleSimApp/VehicleSimApp.xcodeproj/: project.pbxproj
